// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabelWithPercent /> matches snapshot with isActive=true 1`] = `
"
<div class="d-inline-block mw-100">
  <span class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start">
    <span class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent">
      25
    </span>
    <span>
      <span class="components-label-value">
        bar
      </span>
    </span>
    <svg
      aria-hidden="true"
      focusable="false"
      data-prefix="fas"
      data-icon="xmark"
      class="svg-inline--fa fa-xmark cursor-pointer text-reset ms-1"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
      viewbox="0 0 384 512"
      style="font-size: 100%;"
    >
      <path
        fill="currentColor"
        d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
      >
      </path>
    </svg>
  </span>
  <div class="progress components-labelWithPercent-progress me-1">
    <div
      class="progress-bar bg-warning"
      role="progressbar"
      style="width: 50%;"
      aria-valuenow="50"
      aria-valuemin="0"
      aria-valuemax="100"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=0 1`] = `
"
<div class="d-inline-block mw-100">
  <span class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start">
    <span class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent">
      25
    </span>
    <span>
      <span class="components-label-value">
        bar
      </span>
    </span>
  </span>
  <div class="progress components-labelWithPercent-progress me-1">
    <div
      class="progress-bar bg-warning"
      role="progressbar"
      style="width: 50%;"
      aria-valuenow="50"
      aria-valuemin="0"
      aria-valuemax="100"
    >
    </div>
  </div>
</div>
"
`;

exports[`<LabelWithPercent /> matches snapshot with offset=25 1`] = `
"
<div class="d-inline-block mw-100">
  <span class="components-label badge bg-default components-label-dark components-label-with-hover mb-0 ps-0 text-start">
    <span class="me-1 px-1 bg-primary text-white components-labelWithPercent-percent">
      25
    </span>
    <span>
      <span class="components-label-value">
        bar
      </span>
    </span>
  </span>
  <div class="progress components-labelWithPercent-progress me-1">
    <div
      class="progress-bar bg-transparent"
      role="progressbar"
      style="width: 25%;"
      aria-valuenow="25"
      aria-valuemin="0"
      aria-valuemax="100"
    >
    </div>
    <div
      class="progress-bar bg-warning"
      role="progressbar"
      style="width: 50%;"
      aria-valuenow="50"
      aria-valuemin="0"
      aria-valuemax="100"
    >
    </div>
  </div>
</div>
"
`;
